# CLE-Net

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_AND_TESTING.md  Dockerfile  FAQ.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  USER_GUIDE.md  build_exe.py  cle_net.spec  cle_net_cli.py  docker-compose.yml  install.bat  pyproject.toml  requirements.txt  test_live_project.py
benchmarking/: BENCHMARKING.md  EVALUATION_REPORT.md  evaluate.py  generate_synthetic.py  preprocess.py  run_cle_net_eval.py  visualize_comprehensive.py  visualize_results.py
benchmarking/data/: reddit_temporal.pkl  synthetic_temporal.pkl  uci_message_temporal.pkl
benchmarking/dynamic_triad/: README.md  __init__.py  train.py
benchmarking/dyngnn/: dyngnn.py
benchmarking/evolvegcn/: evolvegcn.py
benchmarking/scripts/: evaluate_results.sh  run_cle_net_benchmark.sh  run_dynamic_embeddings.sh  (+1 more)
cle_net.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
core/: __init__.py
docs/: conf.py  glossary.md  index.rst
examples/: demo.py
governance/: contributor_roles.md  decision_process.md
results/: comparison_cora_final.csv  comparison_cora_final_detailed.json  comparison_cora_updated.csv  comparison_cora_updated_detailed.json  comparison_cora_viz  comparison_uci_message_final.csv  comparison_uci_message_final_detailed.json  comparison_uci_updated.csv  comparison_uci_updated_detailed.json  comparison_uci_viz  full_comparison  full_comparison_uci
scripts/: deploy_mainnet.py  deploy_testnet.py  run_tests.py  start_mainnet.py  start_testnet.py
tests/: __init__.py  test_cosmos_app.py  test_integration.py  test_state_machine.py  test_tendermint.py
(+66 files in other folders)
