[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cle-net"
version = "0.1.0"
description = "Cognitive Logic Extraction Network - A blockchain for cognitive law discovery"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Abdelrahman Sadek", email = "your.email@example.com"}
]
keywords = ["blockchain", "cognitive", "cosmos-sdk", "tendermint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "dataclasses-json>=0.5.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
exe = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
cle-net = "cle_net_cli:main"

[project.urls]
Homepage = "https://github.com/Abdelrahman-sadek/CLE-Net"
Documentation = "https://cle-net.readthedocs.io"
Repository = "https://github.com/Abdelrahman-sadek/CLE-Net.git"
Issues = "https://github.com/Abdelrahman-sadek/CLE-Net/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.setuptools.package-data]
"core" = ["*.py", "*.md"]
